--- a/index.html
+++ b/index.html
@@ -1,15 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo HTML</title>
+
+    <style>
+        div{
+            border: 2px solid black;
+        }
+
+        span{
+            border: 2px solid red;
+        }
+
+    </style>
+
 </head>
 <body>
 
     <div>
-         <h1>Olá Mundo!</h1>
+
+         
+        <header>
+            <h1>Olá Mundo!</h1>
+
+            <nav>
+                <ul>
+                   <li>Java</li>
+                   <li>Javascript</li>
+                   <li>Python</li>
+                   <li>C#</li>
+                </ul>
+            </nav>
+
+        </header>
+
+            <nav>
+                <ul>
+                    <li>Java</li>
+                    <li>Java</li>
+                    <li>Java</li>
+                    <li>Java</li>
+                </ul>
+            </nav>
+
+
+        <section>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi voluptates natus dignissimos obcaecati quibusdam, quasi molestiae est! Ab voluptate optio rerum, cupiditate at, nobis illo, vero assumenda eligendi neque nemo.
+            </p>
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur amet modi quaerat dicta asperiores ea iure natus? Ad ipsam quasi, sed, explicabo voluptatem repudiandae expedita, iste veritatis nisi corporis repellat?
+            </p>
+        </section>
+
+        <footer>
+            <div>
+                <small>
+                    <p>Copyright&copy - 2023</p>
+                </small>
+            </div>
+        </footer>
+
+
+
     </div>
 
 </body>
